// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logs errors when some packages fail to build 1`] = `
"[999D[K[0m[7m[33m[1m BUILD [22m[39m[27m[0m packages/fake-pkg-1[999D[K[0m[7m[31m[1m ERROR [22m[39m[27m[0m packages/fake-pkg-1

  Error: failed!

[999D[K[0m[7m[33m[1m BUILD [22m[39m[27m[0m packages/fake-pkg-2[999D[K[0m[7m[32m[1m BUILT [22m[39m[27m[0m packages/fake-pkg-2

[1mPackages: [22m[0m[31m[1m1 failed, [22m[39m[0m[0m[32m[1m1 built, [22m[39m[0m2 total
[1mTime:     [22m[0m[33m[1m0.00s
[22m[39m[0m[0m[31m[1mFailed to build 1 package.
[22m[39m[0m"
`;

exports[`logs success when all packages build successfully 1`] = `
"[999D[K[0m[7m[33m[1m BUILD [22m[39m[27m[0m packages/fake-pkg-1[999D[K[0m[7m[32m[1m BUILT [22m[39m[27m[0m packages/fake-pkg-1
[999D[K[0m[7m[33m[1m BUILD [22m[39m[27m[0m packages/fake-pkg-2[999D[K[0m[7m[32m[1m BUILT [22m[39m[27m[0m packages/fake-pkg-2

[1mPackages: [22m[0m[32m[1m2 built, [22m[39m[0m2 total
[1mTime:     [22m[0m[33m[1m0.00s
[22m[39m[0m[2mBuilt all packages.
[22m"
`;

exports[`pretty prints babel errors when babel compilation fails in a package 1`] = `
"[999D[K[0m[7m[33m[1m BUILD [22m[39m[27m[0m packages/fake-pkg-1[999D[K[0m[7m[31m[1m ERROR [22m[39m[27m[0m packages/fake-pkg-1

  Unexpected token, expected ;

   at [0m[36mpackages/fake-pkg-1/invalid.js[39m[0m:1:5

  [0m[31m[1m>[22m[39m[90m 1 | [39mcons invalid [33m=[39m [35m1[39m[33m;[39m
   [90m   | [39m     [31m[1m^[22m[39m[0m

[999D[K[0m[7m[33m[1m BUILD [22m[39m[27m[0m packages/fake-pkg-2[999D[K[0m[7m[32m[1m BUILT [22m[39m[27m[0m packages/fake-pkg-2

[1mPackages: [22m[0m[31m[1m1 failed, [22m[39m[0m[0m[32m[1m1 built, [22m[39m[0m2 total
[1mTime:     [22m[0m[33m[1m0.00s
[22m[39m[0m[0m[31m[1mFailed to build 1 package.
[22m[39m[0m"
`;
